Added images and logout icons. Made a few modifications to the UI

--- a/frontend/src/styles/CourseSelection.css
+++ b/frontend/src/styles/CourseSelection.css
@@ -1,3 +1,12 @@
 .modal-title {
     font-size: 1.4rem;
 }
+
+.header-text {
+    font-size: 1.6rem;
+    font-weight: bold;
+}
+
+.button-text-color {
+    color:white;
+}
