--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -1,10 +1,59 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
 
+
+
 /** Ionic CSS Variables **/
 :root {
+  --ion-background-color: #e1e5de;
+	--ion-background-color-rgb: 203,233,182;
+
+	--ion-text-color: #000000;
+	--ion-text-color-rgb: 0,0,0;
+
+	--ion-text-color-step-50: #0a0c09;
+	--ion-text-color-step-100: #141712;
+	--ion-text-color-step-150: #1e231b;
+	--ion-text-color-step-200: #292f24;
+	--ion-text-color-step-250: #333a2e;
+	--ion-text-color-step-300: #3d4637;
+	--ion-text-color-step-350: #475240;
+	--ion-text-color-step-400: #515d49;
+	--ion-text-color-step-450: #5b6952;
+	--ion-text-color-step-500: #66755b;
+	--ion-text-color-step-550: #708064;
+	--ion-text-color-step-600: #7a8c6d;
+	--ion-text-color-step-650: #849776;
+	--ion-text-color-step-700: #8ea37f;
+	--ion-text-color-step-750: #98af89;
+	--ion-text-color-step-800: #a2ba92;
+	--ion-text-color-step-850: #adc69b;
+	--ion-text-color-step-900: #b7d2a4;
+	--ion-text-color-step-950: #c1ddad;
+
+	--ion-background-color-step-50: #c1ddad;
+	--ion-background-color-step-100: #b7d2a4;
+	--ion-background-color-step-150: #adc69b;
+	--ion-background-color-step-200: #a2ba92;
+	--ion-background-color-step-250: #98af89;
+	--ion-background-color-step-300: #8ea37f;
+	--ion-background-color-step-350: #849776;
+	--ion-background-color-step-400: #7a8c6d;
+	--ion-background-color-step-450: #708064;
+	--ion-background-color-step-500: #66755b;
+	--ion-background-color-step-550: #5b6952;
+	--ion-background-color-step-600: #515d49;
+	--ion-background-color-step-650: #475240;
+	--ion-background-color-step-700: #3d4637;
+	--ion-background-color-step-750: #333a2e;
+	--ion-background-color-step-800: #292f24;
+	--ion-background-color-step-850: #1e231b;
+	--ion-background-color-step-900: #141712;
+	--ion-background-color-step-950: #0a0c09;
+
+
   /** primary **/
-  --ion-color-primary: #3880ff;
+  --ion-color-primary: rgb(4,163,155);
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -12,7 +61,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
+  --ion-color-secondary: rgb(101, 101, 101);
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
@@ -20,7 +69,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-secondary-tint: #50c8ff;
 
   /** tertiary **/
-  --ion-color-tertiary: #5260ff;
+  --ion-color-tertiary: rgb(50,196,184);
   --ion-color-tertiary-rgb: 82, 96, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
@@ -44,7 +93,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-warning-tint: #ffca22;
 
   /** danger **/
-  --ion-color-danger: #eb445a;
+  --ion-color-danger: #ff0022;
   --ion-color-danger-rgb: 235, 68, 90;
   --ion-color-danger-contrast: #ffffff;
   --ion-color-danger-contrast-rgb: 255, 255, 255;
@@ -76,28 +125,28 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-tint: #f5f6f9;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
    */
 
   body {
-    --ion-color-primary: #428cff;
+    --ion-color-primary: rgb(4,163,155);
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
     --ion-color-primary-shade: #3a7be0;
     --ion-color-primary-tint: #5598ff;
 
-    --ion-color-secondary: #50c8ff;
+    --ion-color-secondary: rgb(101, 101, 101);
     --ion-color-secondary-rgb: 80,200,255;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255,255,255;
     --ion-color-secondary-shade: #46b0e0;
     --ion-color-secondary-tint: #62ceff;
 
-    --ion-color-tertiary: #6a64ff;
+    --ion-color-tertiary: rgb(50,196,184);
     --ion-color-tertiary-rgb: 106,100,255;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255,255,255;
@@ -118,7 +167,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-warning-shade: #e0bb2e;
     --ion-color-warning-tint: #ffd948;
 
-    --ion-color-danger: #ff4961;
+    --ion-color-danger: #f90324;
     --ion-color-danger-rgb: 255,73,97;
     --ion-color-danger-contrast: #ffffff;
     --ion-color-danger-contrast-rgb: 255,255,255;
@@ -225,7 +274,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: #0e0d0d;
 
     --ion-toolbar-background: #1f1f1f;
 
