--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,35 +1,98 @@
-.logo-home{
+
+.logo-home {
     height: 15rem;
     width: 15rem;
 }
+
 .home-title {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 700;
-    text-wrap:wrap;
+    white-space: normal; /* Ensure text wraps */
+    word-wrap: break-word; /* Break long words if needed */
+    width: 100%; /* Make sure the title takes full width */
+    padding-left: 0;
 }
 
 .home-text {
     font-size: 1rem;
-    padding-left: 20px;
-    text-wrap: wrap;
-}
-
-.btn-padding-left{
-    padding-left: 20px;
+    white-space: normal; /* Ensure text wraps */
+    word-wrap: break-word; /* Break long words if needed */
+    width: 100%; /* Make sure the text takes full width */
 }
 
 .home-card {
-    padding: 4.5rem;
+    padding: 2rem; /* Adjusted for smaller screens */
 }
 
 .number-cards-title {
-    font-size: 3.3rem;
+    font-size: 2rem; /* Adjusted for smaller screens */
 }
 
 .number-cards {
     border-right: solid 1px rgba(4, 163, 155, 0.5);
 }
 
-.card-map {
-    --background: rgb(120,187,76, .85);
+.mySwiper {
+    width: 80%;
+    height: 350px; /* Adjust height as needed */
+    position: relative;
+}
+
+.slide-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.slide-content img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-card {
+    --background: #c7c7c7;
+}
+
+.swiper-header {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.slide-description {
+    font-size: 1rem;
+}
+
+.slide-text {
+   /* color: rgba(4,106,59,255); */
+}
+
+@media (max-width: 768px) {
+    .home-title {
+        font-size: 1.5rem;
+    }
+    .home-card {
+        padding: 1rem;
+    }
+    .logo-home {
+        height: 10rem;
+        width: 10rem;
+    }
+}
+
+.contactanos-card {
+    --background: #2e2e2e;
+}
+
+.icon-text-col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem 0; /* Adjust padding if necessary */
+}
+
+.icon-text-col ion-icon {
+    margin-bottom: 1rem; /* Space between the icon and text */
+    font-size: 3.5rem;
 }
